--- a/Pages/ClinicDayView.cshtml
+++ b/Pages/ClinicDayView.cshtml
@@ -84,18 +84,24 @@
         var apptDateArray = [];
         var apptTimeArray = [];
         var apptDurationArray = [];
+        var apptDurationArray = [];
         var apptClinicArray = [];
         var apptClinicianArray = [];
         var apptOutcomeArray = [];
-        var apptRefIDArray = [];        
+        var apptRefIDArray = [];
         var pedNoArray = [];
+        var ClinicLetterDateArray = [];
         var pedNameArray = [];
+        var pednumArray = [];
+        var alertArray = [];
+        var nationalHolidayArray = [];
+        var commentArray = [];
 
         const today = new Date();
         const rightnow = today.getHours() + ":" + today.getMinutes();
         today.setHours(0, 0, 0, 0);
             
-
+        
         @if (Model.appointmentList != null) 
         {
             @foreach (var item in Model.appointmentList)
@@ -103,7 +109,7 @@
                 @:apptDateArray.push("@item.BOOKED_DATE");
                 @:apptTimeArray.push("@item.BOOKED_TIME");
                 @:apptDurationArray.push("@item.Duration");
-                @:apptClinicArray.push("@item.Clinic");
+                @:apptClinicArray.push("@item.FACILITY");
                 @:apptClinicianArray.push("@item.Clinician");
                 @:pedNoArray.push("@item.FamilyNumber");
                 @:apptOutcomeArray.push("@item.Attendance");
@@ -126,6 +132,7 @@
                 }
             }
         } 
+        
         if (apptClinicArray.length != 0 && apptTimeArray.length != 0) 
         {            
             for (var i = 0, row; row = cMatrix.rows[i]; i++) 
@@ -140,17 +147,18 @@
                             var theClinic = col.id.substring(14, col.id.length-1);
                             
                             for (var k = 0; k < apptClinicArray.length; k++) 
-                            {
+                            {                               
                                 if (theClinic == apptClinicArray[k]) 
                                 {
                                     for (var l = 0; l < apptTimeArray.length; l++) 
-                                    {
+                                    {                                        
                                         const myTime = apptTimeArray[k].substring(11, 16);
                                         var strApptDetail;
                                         if (myTime == theTime) 
-                                        {
+                                        {                                            
                                             if (apptOutcomeArray[k] != "Declined" & apptOutcomeArray[k] != "Cancelled by patient" & apptOutcomeArray[k] != "Cancelled by professional") 
                                             {
+                                                
                                                 document.getElementById(col.id).classList.add("currentappt");
 
                                                 strApptDetail = "Booked - " + apptDurationArray[k].toString() + " mins</br> " +
