Change appconfirm to include SlotID parameter

--- a/Pages/AppConfirm.cshtml
+++ b/Pages/AppConfirm.cshtml
@@ -103,6 +103,7 @@
                 <input id="txtTim" name="tim" value=@Model.appTime.ToString("HH:mm:ss") />
                 <input id="txtDur" name="dur" value=@Model.appDur />
                 <input id="txtWLID" name="wlid" value=@Model.wlID />
+                <input id="txtSlotID" name="slotID" value=@Model.slID />
             }
         </div>
     </form>
