date search and cgu number on confirm screen

--- a/Pages/AppConfirm.cshtml
+++ b/Pages/AppConfirm.cshtml
@@ -7,7 +7,7 @@
 
     @if (Model.patient != null)
     {
-        <h1 class="text-center">Confirm appt for @Model.patient.FIRSTNAME @Model.patient.LASTNAME</h1>
+        <h1 class="text-center">Confirm appt for @Model.patient.CGU_No - @Model.patient.FIRSTNAME @Model.patient.LASTNAME</h1>
     }
     else
     {
